--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <head><B>Hello world</B></head>
-Can we add photos?
+<BR>Can we add photos?
 Learn to code
+<button type="button">Click Me!</button>
